# 123

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEX_TEST.md  DECISIONS.md  Dockerfile  Makefile  PROJECT_SPEC.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: analytics.py  collector.py  config.py  db.py  domain.py  grouping.py  main.py  metrics.py  migrate.py  recompute.py  rounds.py  vmray.py  vti_taxonomy.py
app/static/: app.css
docs/: IOC_NORMALIZATION.md  LOGICAL_EXPERIMENT_GROUPING.md  OVERVIEW_COMPLETENESS_FIX.md  STAGE0_REPORT.md  VERDICT_CLASSIFICATION.md  VMRAY_API_FINDINGS.md
migrations/: 001_initial.sql  002_group_completeness.sql  003_logical_experiments.sql  004_collector_cycle_telemetry.sql  005_remove_raw_payload_storage.sql  006_remove_grouping.sql  007_stage1_fields.sql  008_round_metrics_cleanup.sql  009_static_detector_vtis.sql  010_revert_static_detector_split.sql  011_drop_unknown_vti_counter.sql  012_vti_seen_categories.sql
ops/: BACKUP_AND_RESTORE.md  Caddyfile  DEPLOYMENT.md  TROUBLESHOOTING.md  VMRAY_CONFIGURATION.md  backup.sh  provision-env.sh
scripts/: verify_fields.py
tests/: test_behavioural_coverage.py  test_collector_idempotency.py  test_completeness.py  test_consolidated_dashboard.py  test_domain.py  test_health.py  test_logical_grouping.py  test_logical_verdict_support.py  test_migration_010.py  test_recompute.py  test_remove_raw_storage.py  test_round_metrics.py  test_sample_analytics.py  test_stage1_ingestion.py  test_vti_comparison.py  test_vti_taxonomy.py
(+8 files in other folders)
