[project]
name = "vmray-analytics"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "psycopg[binary,pool]==3.2.9",
  "jinja2==3.1.6",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
test = ["pytest==8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
